# rust_my_doc_search

./: Cargo.toml  build.rs  icon.rc  log4rs.yaml  readme.txt
src/: app.rs  lib.rs  main.rs
src/component/: cmd.rs  comp_7z.rs  mod.rs  rust_c.rs
src/dao/: files_dao.rs  index_dir_dao.rs  mod.rs  sqlite_dao.rs
src/file_scanner/: file_extractor.rs  file_text_extractor.rs  mod.rs
src/sys/: global.rs  mod.rs
src/tantivy/: mod.rs  tantivy_jieba.rs  tantivy_search.rs
src/ui/: main_win.rs  mod.rs  ui_global.rs
src/util/: text_utils.rs
tests/: cmd_test.rs  egui_test.rs  file_extractor_test.rs  tantivy_search_test.rs  text_utils_test.rs
