[package]
name = "rust_my_doc_search"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[package.metadata.cargo-bundle]
targets = ["x86_64-pc-windows-msvc"]

[build-dependencies]
embed-resource =  "1.7.2"

[dependencies]
rust_common = { path = "../rust_common", default-features = false, features = [
    "log_util",
    "date",
    "file_util",
    "office_text_extractor",
    "tokio_file",
] }

chrono = { version = "0.4.35", features = ["serde"] }
chrono-tz = "0.9.0"


futures-util ="0.3.31"
tokio = { version = "1.41.1", features = ["full"]}
tokio-util = "0.7.12"
serde_yaml = "0.9.27"
serde_json = "1.0.108"
serde = {version = "1.0.190",features = ["derive"] }

open = "5.3.1"

log = "0.4.22"
log4rs = "1.3.0"

rand = "0.8.5"
egui = "0.29.1"
eframe = {version = "0.29.1",features = ["__screenshot", "default_fonts","wgpu"]}
egui_extras = {version = "0.29.1", features = ["image"]}
rfd = "0.15.1"
sqlx = { version = "0.7.4", features = [
    "sqlite",
    "runtime-tokio",
    "macros",
    "chrono",
    "time",
] }

uuid = { version = "1.10.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }

encoding = { version = "0.2.33" }
image = "0.25.2"
bitstream-io = "=2.3.0"
lazy_static = "1.5.0"
extractous = "0.2.0"
tantivy = { version = "0.22.0"}
jieba-rs = { version = "0.7.0"}
tantivy-tokenizer-api = {version = "0.3.0"}
json = { version = "0.12.4"}
regex = "1.11.1"
indexmap = "2.7.0"
dirs-next = "2.0.0"